fix(avatars): fix overflow of the threads headers in thread lists
When the avatars feature was enabled, some threads in thread lists
overflowed to the right. This is due to a change in the Community
Console, which this CL adapts to.

--- a/src/features/avatars/ui/staticStyles/styles.css
+++ b/src/features/avatars/ui/staticStyles/styles.css
@@ -55,5 +55,5 @@ html[dir="rtl"] .TWPT-avatars .TWPT-avatar:not(:first-child) {
  * styles. The second px value is the value substracted due to the avatars.
  */
 body.TWPT-threadlistavatars-enabled ec-thread-summary .main-header .action .header .header-content {
-  width: calc(100% - 160px - 98px);
+  width: calc(100% - 164px - 98px);
 }
